# QtSpellcheckingWindowsTSF

./: CMakeLists.txt  Main.qml  README.md  highlightcomponent.cpp  highlightcomponent.h  main.cpp  spellchecker.cpp  spellchecker.h
